// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="MY"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 3`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="UPCOMING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle="handle"
  />
</div>
`;

exports[`Matches shallow shapshot 4`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="OPEN_FOR_REGISTRATION"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
  <Bucket
    bucket={Object {}}
    bucketId="PAST"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={false}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={[Function]}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
</div>
`;

exports[`Matches shallow shapshot 5`] = `
<div
  className="src-shared-components-challenge-listing-Listing-___style__challengeCardContainer___3p0Ge"
>
  <Bucket
    bucket={Object {}}
    bucketId="ONGOING"
    challenges={Array []}
    challengesUrl={undefined}
    communityName={null}
    expand={[Function]}
    expanded={true}
    filterState={undefined}
    keepPlaceholders={false}
    loadMore={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    prizeMode={undefined}
    selectChallengeDetailsTab={undefined}
    selectedCommunityId={undefined}
    setFilterState={[Function]}
    setSort={[Function]}
    sort={null}
    userHandle=""
  />
</div>
`;
